multiple webcam streaming

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,96 +11,8 @@
     </style>
 </head>
 <body>
-    
-    <video id="remoteVideo" autoplay playsinline></video>
-
-    <script>
-        window.stats = new WebRTCStats({
-            getStatsInterval: 2000,
-            rawStats: true,
-            statsObject: true,
-            filteredStats: true,
-            wrapGetUserMedia: true,
-            debug: true,
-            remote: true
-        })
-
-        window.stats.on('track', (event) => {
-            // if (event.track.kind == 'video') {
-            //     const stream = event.streams[0]
-            //     const videoTrack = stream.getVideoTracks()[0];
-            //     const { width, height, frameRate } = videoTrack.getSettings();
-            //     console.log(width, height, frameRate);
-            //     document.getElementById("remoteVideo").srcObject = stream;
-            // }
-        })
-
-        const config = {
-            sdpSemantics: 'unified-plan',
-            iceServers: [
-                { 
-                    urls: ['stun:stun.l.google.com:19302'] 
-                }
-            ]
-        }
-
-        // Create a new RTCPeerConnection instance
-        let pc = new RTCPeerConnection(config);
-
-        stats.addConnection({ 
-          pc: pc,
-          peerId: 'RaspberryPi5_1'
-        })
-
-        pc.addEventListener('track', async (event) => {
-            if (event.track.kind == 'video') {
-                const stream = event.streams[0]
-                console.log(stream)
-                const videoTrack = stream.getVideoTracks()[0];
-                const { width, height, frameRate } = videoTrack.getSettings();
-                console.log(width, height, frameRate);
-                document.getElementById("remoteVideo").srcObject = stream;
-            }
-        });
-
-        pc.addTransceiver('video', { direction: 'recvonly' });
-
-        pc.createOffer().then(function (offer) {
-            return pc.setLocalDescription(offer);
-        }).then(function () {
-            // wait for ICE gathering to complete
-            return new Promise(function (resolve) {
-                if (pc.iceGatheringState === 'complete') {
-                    resolve();
-                } else {
-                    function checkState() {
-                        if (pc.iceGatheringState === 'complete') {
-                            pc.removeEventListener('icegatheringstatechange', checkState);
-                            resolve();
-                        }
-                    }
-                    pc.addEventListener('icegatheringstatechange', checkState);
-                }
-            });
-        }).then(function () {
-            var offer = pc.localDescription;
-            return fetch('/offer', {
-                body: JSON.stringify({
-                    sdp: offer.sdp,
-                    type: offer.type,
-                }),
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                method: 'POST'
-            });
-        }).then(function (response) {
-            return response.json();
-        }).then(function (answer) {
-            return pc.setRemoteDescription(answer);
-        }).catch(function (e) {
-            console.error(e);
-        });
-    </script>
+    <img src="http://192.168.254.194:5000/video_feed"/>
+    <img src="http://192.168.254.195:5000/video_feed"/>
+    <img src="http://192.168.254.196:5000/video_feed"/>
 </body>
 </html>
